re PR ada/24880 (infinite loop on conversion of integer type with size clause)

PR ada/24880
	PR ada/26635
	* utils.c (convert) <INTEGER_TYPE>: When converting an additive
	expression to an integral type with lower precision, use NOP_EXPR
	directly in a couple of special cases.

From-SVN: r135258